# Pomme

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: Pomme.cpp  Pomme.h  PommeDebug.cpp  PommeDebug.h  PommeEnums.h  PommeFiles.h  PommeGraphics.h  PommeInit.h  PommeMemory.h  PommeSound.h  PommeTypes.h  PommeVideo.h
src/CompilerSupport/: CoexistWithCarbon.h  filesystem.h  filesystem_implementation.hpp
src/Files/: Files.cpp  HostVolume.cpp  HostVolume.h  Resources.cpp  Volume.h
src/Graphics/: ColorManager.cpp  Graphics.cpp  Icons.cpp  PICT.cpp
src/Input/: SDLInput.cpp
src/Memory/: BlockDescriptor.h  Memory.cpp
src/Platform/Windows/: PommeWindows.cpp
src/QD3D/: 3DMFInternal.h  3DMFParser.cpp  QD3D.cpp  QD3D.h  QD3DMath.cpp  QD3DMath.h
src/Sound/: AIFF.cpp  SoundManager.cpp  SoundUtilities.cpp  cmixer.cpp  cmixer.h
src/SoundFormats/: AIFF.cpp  IMA4.cpp  Midi.cpp  SoundFormats.cpp  mp3.cpp  xlaw.cpp
src/SoundMixer/: ChannelImpl.cpp  ChannelImpl.h  SoundManager.cpp  cmixer.cpp  cmixer.h
src/Text/: TextUtilities.cpp
src/Time/: TimeManager.cpp
src/Utilities/: StringUtils.cpp  StringUtils.h  bigendianstreams.cpp  bigendianstreams.h  structpack.cpp  structpack.h
src/Video/: moov.cpp
